[gd_scene load_steps=3 format=3 uid="uid://0orec0883j1m"]

[ext_resource type="Texture2D" uid="uid://ctgpemhy71i00" path="res://icon.svg" id="1_07ql3"]
[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_fifkn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fifkn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 910.0
offset_bottom = 910.0
texture = ExtResource("1_07ql3")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Logo" type="TextureRect" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_07ql3")

[node name="NewGame" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="PanelContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
